Current Encoding VS NAM

--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.002 | 2019/04/08</title>
+		<title>VRD | Advent | 3.002 | 2019/04/09</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="m&#97;&#x69;&#108;t&#x6f;:&#x73;&#117;&#x70;&#x70;&#111;&#114;&#x74;&#64;&#118;&#x69;&#x76;ar&#97;&#100;&#x6f;&#46;c&#111;m">&#x73;&#117;&#x70;&#x70;&#111;&#114;&#x74;&#64;&#118;&#x69;&#x76;ar&#97;&#100;&#x6f;&#46;c&#111;m</a></li>
+<li>VivaRado <a href="&#x6d;&#97;&#x69;&#x6c;&#116;&#x6f;&#x3a;&#x73;u&#112;p&#x6f;&#x72;&#116;&#64;&#118;&#105;&#x76;&#x61;&#x72;&#x61;&#100;&#x6f;&#x2e;&#x63;&#111;&#x6d;">&#x73;u&#112;p&#x6f;&#x72;&#116;&#64;&#118;&#105;&#x76;&#x61;&#x72;&#x61;&#100;&#x6f;&#x2e;&#x63;&#111;&#x6d;</a></li>
 <li>Andreas Kalpakides</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;a&#105;&#x6c;&#x74;&#111;&#58;&#x6d;&#x6a;&#x6c;&#97;&#x67;&#97;&#116;&#116;u&#116;&#97;&#x40;&#103;&#x6d;&#97;&#105;&#108;&#x2e;&#99;&#x6f;&#109;">&#x6d;&#x6a;&#x6c;&#97;&#x67;&#97;&#116;&#116;u&#116;&#97;&#x40;&#103;&#x6d;&#97;&#105;&#108;&#x2e;&#99;&#x6f;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#x61;i&#108;&#x74;&#x6f;&#58;&#109;&#x6a;&#108;&#x61;&#103;a&#116;&#x74;&#x75;t&#97;&#x40;&#x67;&#109;&#97;&#105;&#x6c;&#x2e;&#99;o&#x6d;">&#109;&#x6a;&#108;&#x61;&#103;a&#116;&#x74;&#x75;t&#97;&#x40;&#x67;&#109;&#97;&#105;&#x6c;&#x2e;&#99;o&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1011,7 +1011,7 @@ later you can export to Componentized UFOs.</p>
         ADV-0003 Advent 3 PR:         done,des2, 2019-02-16, 2019-04-01
         ADV-0004 Advent 4 Planning:         des3, after des2, 2019-04-30
         ADV-0004-0001:         done, des4, 2019-03-31, 2h
-        ADV-0004-0002:         des5, 2019-04-09, 2h
+        ADV-0004-0002:         done, des5, 2019-04-09, 2h
         ADV-0004-0003:         des6, 2019-04-10, 2h
         ADV-0004-0004:         des7, 2019-04-11, 2h
         ADV-0004-0005:         des8, 2019-04-12, 2h
@@ -1067,7 +1067,6 @@ later you can export to Componentized UFOs.</p>
 <li>Personnel Plan</li>
 </ul></li>
 </ul></li>
-<li><strong>ADV-0004-0002 Compare Current Encoding Support against NAM</strong> / Apil 09</li>
 </ul></li>
 </ul></li>
 <li><p>Completed:</p>
@@ -1076,6 +1075,10 @@ later you can export to Componentized UFOs.</p>
 <li><strike><strong>ADV-0001</strong> / July 01 2018 to 2019-02-16</strike>:
 <ul>
 <li>Advent  ∞3.000 Delivered.</li>
+</ul></li>
+<li><strong>ADV-0004</strong>:
+<ul>
+<li>~~<strong>ADV-0004-0002 Compare Current Encoding Support against NAM</strong> / Apil 09 ~~</li>
 </ul></li>
 </ul></li>
 </ul>
@@ -1160,7 +1163,7 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#x61;&#105;&#108;&#x74;&#111;&#58;&#x73;&#x75;&#x70;&#112;o&#x72;&#x74;&#x40;&#118;&#105;&#x76;a&#x72;&#97;&#x64;&#111;&#46;&#x63;&#111;&#x6d;">&#x73;&#x75;&#x70;&#112;o&#x72;&#x74;&#x40;&#118;&#105;&#x76;a&#x72;&#97;&#x64;&#111;&#46;&#x63;&#111;&#x6d;</a></li>
+<li><a href="&#x6d;a&#x69;&#x6c;&#x74;&#111;&#x3a;&#115;&#117;&#112;p&#111;&#x72;&#x74;&#64;&#118;&#x69;&#118;&#x61;r&#x61;&#100;o&#x2e;&#x63;&#x6f;&#109;">&#115;&#117;&#112;p&#111;&#x72;&#x74;&#64;&#118;&#x69;&#118;&#x61;r&#x61;&#100;o&#x2e;&#x63;&#x6f;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
