--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#97;&#x69;&#x6c;&#116;&#x6f;&#x3a;&#x73;u&#112;p&#x6f;&#x72;&#116;&#64;&#118;&#105;&#x76;&#x61;&#x72;&#x61;&#100;&#x6f;&#x2e;&#x63;&#111;&#x6d;">&#x73;u&#112;p&#x6f;&#x72;&#116;&#64;&#118;&#105;&#x76;&#x61;&#x72;&#x61;&#100;&#x6f;&#x2e;&#x63;&#111;&#x6d;</a></li>
+<li>VivaRado <a href="&#x6d;a&#105;&#x6c;&#116;&#111;&#x3a;&#115;&#x75;&#112;&#112;&#x6f;r&#x74;&#x40;&#x76;&#x69;v&#97;&#114;&#97;&#x64;&#111;&#x2e;&#99;&#x6f;m">&#115;&#x75;&#112;&#112;&#x6f;r&#x74;&#x40;&#x76;&#x69;v&#97;&#114;&#97;&#x64;&#111;&#x2e;&#99;&#x6f;m</a></li>
 <li>Andreas Kalpakides</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#x61;i&#108;&#x74;&#x6f;&#58;&#109;&#x6a;&#108;&#x61;&#103;a&#116;&#x74;&#x75;t&#97;&#x40;&#x67;&#109;&#97;&#105;&#x6c;&#x2e;&#99;o&#x6d;">&#109;&#x6a;&#108;&#x61;&#103;a&#116;&#x74;&#x75;t&#97;&#x40;&#x67;&#109;&#97;&#105;&#x6c;&#x2e;&#99;o&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#109;a&#105;&#x6c;&#x74;&#111;:&#x6d;&#106;&#108;&#x61;&#103;&#97;&#x74;&#116;&#x75;&#x74;&#x61;&#x40;&#103;&#109;&#x61;&#105;&#108;&#46;&#99;om">&#x6d;&#106;&#108;&#x61;&#103;&#97;&#x74;&#116;&#x75;&#x74;&#x61;&#x40;&#103;&#109;&#x61;&#105;&#108;&#46;&#99;om</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1078,7 +1078,7 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 <li><strong>ADV-0004</strong>:
 <ul>
-<li>~~<strong>ADV-0004-0002 Compare Current Encoding Support against NAM</strong> / Apil 09 ~~</li>
+<li><strike><strong>ADV-0004-0002 Compare Current Encoding Support against NAM</strong></strike> 2019-04-09 2h</li>
 </ul></li>
 </ul></li>
 </ul>
@@ -1163,7 +1163,7 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;a&#x69;&#x6c;&#x74;&#111;&#x3a;&#115;&#117;&#112;p&#111;&#x72;&#x74;&#64;&#118;&#x69;&#118;&#x61;r&#x61;&#100;o&#x2e;&#x63;&#x6f;&#109;">&#115;&#117;&#112;p&#111;&#x72;&#x74;&#64;&#118;&#x69;&#118;&#x61;r&#x61;&#100;o&#x2e;&#x63;&#x6f;&#109;</a></li>
+<li><a href="&#109;a&#105;&#108;&#x74;&#111;&#58;&#115;&#117;&#x70;&#x70;&#111;&#114;&#x74;&#64;&#x76;&#105;&#x76;&#x61;&#114;&#97;&#100;&#x6f;&#46;&#x63;&#111;&#109;">&#115;&#117;&#x70;&#x70;&#111;&#114;&#x74;&#64;&#x76;&#105;&#x76;&#x61;&#114;&#97;&#100;&#x6f;&#46;&#x63;&#111;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
