--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.003 | 2019/04/09</title>
+		<title>VRD | Advent | 3.003 | 2019/04/10</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#x61;&#x69;&#108;t&#x6f;&#x3a;&#x73;&#117;&#112;&#x70;o&#114;&#116;&#x40;&#x76;i&#x76;&#x61;&#x72;&#97;&#100;&#x6f;&#x2e;&#x63;&#x6f;&#x6d;">&#x73;&#117;&#112;&#x70;o&#114;&#116;&#x40;&#x76;i&#x76;&#x61;&#x72;&#97;&#100;&#x6f;&#x2e;&#x63;&#x6f;&#x6d;</a></li>
-<li>Andreas Kalpakides</li>
+<li>VivaRado <a href="&#x6d;&#97;&#105;&#x6c;&#x74;&#x6f;&#58;&#115;&#x75;&#112;&#x70;&#111;&#114;&#116;&#64;&#118;&#105;v&#97;&#x72;&#x61;&#100;&#x6f;&#x2e;&#99;&#111;&#x6d;">&#115;&#x75;&#112;&#x70;&#111;&#114;&#116;&#64;&#118;&#105;v&#97;&#x72;&#x61;&#100;&#x6f;&#x2e;&#99;&#111;&#x6d;</a></li>
+<li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#x61;&#x69;&#x6c;to&#x3a;m&#x6a;&#108;&#x61;ga&#116;&#116;&#117;&#116;a&#x40;&#103;&#109;&#97;&#x69;&#x6c;&#46;&#x63;&#111;&#109;">m&#x6a;&#108;&#x61;ga&#116;&#116;&#117;&#116;a&#x40;&#103;&#109;&#97;&#x69;&#x6c;&#46;&#x63;&#111;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#x61;i&#108;&#116;&#x6f;&#x3a;&#109;&#x6a;&#x6c;&#x61;&#x67;&#x61;&#x74;&#x74;u&#x74;&#x61;&#64;&#103;&#109;&#97;&#x69;&#108;&#x2e;c&#x6f;&#109;">&#109;&#x6a;&#x6c;&#x61;&#x67;&#x61;&#x74;&#x74;u&#x74;&#x61;&#64;&#103;&#109;&#97;&#x69;&#108;&#x2e;c&#x6f;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1163,7 +1163,7 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="m&#97;&#105;&#108;&#116;&#x6f;&#x3a;&#x73;&#x75;&#112;&#112;&#x6f;&#114;&#116;&#64;&#x76;&#x69;&#x76;&#97;&#x72;&#x61;&#100;&#111;&#x2e;&#x63;&#111;&#x6d;">&#x73;&#x75;&#112;&#112;&#x6f;&#114;&#116;&#64;&#x76;&#x69;&#x76;&#97;&#x72;&#x61;&#100;&#111;&#x2e;&#x63;&#111;&#x6d;</a></li>
+<li><a href="&#x6d;&#x61;&#x69;&#108;&#x74;&#x6f;&#58;&#115;&#117;&#x70;&#112;&#x6f;&#114;&#x74;&#64;&#x76;&#x69;&#x76;&#97;r&#x61;&#100;&#111;&#x2e;&#99;&#x6f;&#109;">&#115;&#117;&#x70;&#112;&#x6f;&#114;&#x74;&#64;&#x76;&#x69;&#x76;&#97;r&#x61;&#100;&#111;&#x2e;&#99;&#x6f;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
