--- a/README/README.html
+++ b/README/README.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
-		<title>VRD | Advent | 3.004 | 2019/04/10</title>
+		<title>VRD | Advent | 3.004 | 2019/04/13</title>
 		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 		<link rel="stylesheet" type="text/css" href="assets/css/code_native.css">
 		<script type="text/javascript" src="assets/js/mermaid.js"></script>
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#97;&#x69;&#x6c;&#116;&#111;&#x3a;&#115;&#x75;&#x70;&#x70;o&#x72;&#x74;&#x40;&#x76;&#x69;&#x76;&#x61;&#x72;&#x61;&#100;&#x6f;&#x2e;&#x63;&#x6f;&#x6d;">&#115;&#x75;&#x70;&#x70;o&#x72;&#x74;&#x40;&#x76;&#x69;&#x76;&#x61;&#x72;&#x61;&#100;&#x6f;&#x2e;&#x63;&#x6f;&#x6d;</a></li>
+<li>VivaRado <a href="m&#x61;i&#108;&#x74;&#111;&#58;&#x73;&#x75;&#x70;p&#111;&#x72;&#116;&#64;viv&#x61;&#x72;&#97;&#x64;o&#46;&#99;&#x6f;&#x6d;">&#x73;&#x75;&#x70;p&#111;&#x72;&#116;&#64;viv&#x61;&#x72;&#97;&#x64;o&#46;&#99;&#x6f;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#x61;&#x69;&#108;&#116;&#x6f;&#58;&#x6d;&#106;&#x6c;&#x61;&#103;&#97;&#116;&#116;u&#x74;&#97;&#x40;&#x67;&#109;&#97;&#105;&#x6c;&#46;&#99;&#x6f;&#x6d;">&#x6d;&#106;&#x6c;&#x61;&#103;&#97;&#116;&#116;u&#x74;&#97;&#x40;&#x67;&#109;&#97;&#105;&#x6c;&#46;&#99;&#x6f;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#97;&#x69;&#108;&#116;&#111;&#x3a;&#109;&#106;&#x6c;&#x61;&#x67;&#97;&#116;&#116;u&#116;&#x61;&#64;&#x67;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#x6d;">&#109;&#106;&#x6c;&#x61;&#x67;&#97;&#116;&#116;u&#116;&#x61;&#64;&#x67;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1025,14 +1025,14 @@ later you can export to Componentized UFOs.</p>
         dateFormat  YYYY-MM-DD
         title Advent Schedule
         section Advent 3
-        ADV-0001 Advent 3:         done,des1, 2018-08-22,2019-02-16
+        #ADV-0001 Advent 3:         done,des1, 2018-08-22,2019-02-16
         ADV-0003 Advent 3 PR:         done,des2, 2019-02-16, 2019-04-01
         ADV-0004 Advent 4 Planning:         des3, after des2, 2019-04-30
         ADV-0004-0001:         done, des4, 2019-03-31, 2h
         ADV-0004-0002 Compare NAM:         done, des5, 2019-04-09, 2h
         ADV-0004-0003 MI Map:         done, des6, 2019-04-10, 2h
-        ADV-0004-0004:         des7, 2019-04-11, 2h
-        ADV-0004-0005:         des8, 2019-04-12, 2h
+
+        ADV-0004-0005 Autokern Reintegration to TYPL - Standalone Repo: done, des8, 2019-04-12, 6h
         ADV-0004-0006:         des9, 2019-04-13, 2h
         ADV-0004-0007:         des10, 2019-04-14, 2h
         ADV-0004-0008:         des11, 2019-04-15, 2h
@@ -1098,19 +1098,9 @@ later you can export to Componentized UFOs.</p>
 <ul>
 <li><strike><strong>ADV-0004-0002 Compare Current Encoding Support against NAM</strong></strike> 2019-04-09 2h</li>
 <li><strike><strong>ADV-0004-0003 Masters and Instances Map</strong></strike> 2019-04-10 4h</li>
+<li><strike><strong>ADV-0004-0005 Autokern Reintegration to TYPL</strong></strike> 2019-04-12 6h</li>
 </ul></li>
 </ul></li>
-</ul>
-
-<h3><strong>Introduction / Phase Introduction / Planning Phase / Safe Planning / Schedule Planning / Timeline</strong></h3>
-
-<ul>
-<li>July 01 2018: Start of Redesign</li>
-<li>January 28 2019: Final Kerning for CB for G and L.</li>
-<li>January 31 2019: Contour Fixes, Updates for all weights and anchor alignments.</li>
-<li>February 16 2019: Updated to match contour optimisations of <a href="https://github.com/mjlagattuta/Advent-Pro">mjlagattuta fork</a>, Updated sources. Observe process at <a href="https://github.com/VivaRado/Advent/issues/13">Advent Third Pickup +</a></li>
-<li>February 17 2019: Updated to match Kerning Classification optimisations of <a href="https://github.com/mjlagattuta/Advent-Pro">mjlagattuta fork</a>. Further Classification updates, reduction of kerning pairs by 307, Updated sources. Observe process at <a href="https://github.com/VivaRado/Advent/issues/13">Advent Third Pickup +</a></li>
-<li>March 23 2019: Documentation Restructure, according to VivaRado ORGDOC.</li>
 </ul>
 
 <hr />
@@ -1182,7 +1172,7 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#97;&#x69;&#108;&#x74;&#x6f;:&#115;&#x75;&#x70;&#x70;&#111;&#114;&#116;&#64;&#118;&#105;&#118;&#97;&#x72;&#97;&#100;&#111;&#46;&#99;&#x6f;&#109;">&#115;&#x75;&#x70;&#x70;&#111;&#114;&#116;&#64;&#118;&#105;&#118;&#97;&#x72;&#97;&#100;&#111;&#46;&#99;&#x6f;&#109;</a></li>
+<li><a href="&#x6d;&#x61;&#105;&#108;t&#x6f;&#x3a;&#x73;&#117;&#112;&#112;&#x6f;&#x72;&#x74;&#64;v&#105;&#x76;&#97;&#114;&#97;&#x64;&#111;&#x2e;&#x63;&#x6f;&#x6d;">&#x73;&#117;&#112;&#112;&#x6f;&#x72;&#x74;&#64;v&#105;&#x76;&#97;&#114;&#97;&#x64;&#111;&#x2e;&#x63;&#x6f;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
