--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="m&#x61;i&#108;&#x74;&#111;&#58;&#x73;&#x75;&#x70;p&#111;&#x72;&#116;&#64;viv&#x61;&#x72;&#97;&#x64;o&#46;&#99;&#x6f;&#x6d;">&#x73;&#x75;&#x70;p&#111;&#x72;&#116;&#64;viv&#x61;&#x72;&#97;&#x64;o&#46;&#99;&#x6f;&#x6d;</a></li>
+<li>VivaRado <a href="&#x6d;&#97;&#105;&#108;&#x74;&#x6f;&#x3a;&#x73;&#x75;&#112;&#112;&#111;r&#116;&#x40;&#x76;&#105;&#x76;&#97;&#114;&#97;&#100;&#111;&#x2e;&#99;&#111;&#x6d;">&#x73;&#x75;&#112;&#112;&#111;r&#116;&#x40;&#x76;&#105;&#x76;&#97;&#114;&#97;&#100;&#111;&#x2e;&#99;&#111;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#97;&#x69;&#108;&#116;&#111;&#x3a;&#109;&#106;&#x6c;&#x61;&#x67;&#97;&#116;&#116;u&#116;&#x61;&#64;&#x67;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#x6d;">&#109;&#106;&#x6c;&#x61;&#x67;&#97;&#116;&#116;u&#116;&#x61;&#64;&#x67;&#109;&#97;&#105;&#108;&#46;&#99;&#111;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;ai&#108;&#116;&#x6f;&#x3a;m&#x6a;&#x6c;&#x61;&#103;&#x61;&#116;&#116;&#117;&#x74;a&#x40;&#103;&#x6d;&#x61;&#105;&#x6c;&#46;&#99;&#111;&#x6d;">m&#x6a;&#x6c;&#x61;&#103;&#x61;&#116;&#116;&#117;&#x74;a&#x40;&#103;&#x6d;&#x61;&#105;&#x6c;&#46;&#99;&#111;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1172,7 +1172,7 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#x61;&#105;&#108;t&#x6f;&#x3a;&#x73;&#117;&#112;&#112;&#x6f;&#x72;&#x74;&#64;v&#105;&#x76;&#97;&#114;&#97;&#x64;&#111;&#x2e;&#x63;&#x6f;&#x6d;">&#x73;&#117;&#112;&#112;&#x6f;&#x72;&#x74;&#64;v&#105;&#x76;&#97;&#114;&#97;&#x64;&#111;&#x2e;&#x63;&#x6f;&#x6d;</a></li>
+<li><a href="&#109;&#97;i&#x6c;&#x74;&#111;&#58;&#115;&#117;&#x70;&#x70;&#x6f;&#x72;&#116;&#64;&#118;&#105;&#118;&#97;&#114;&#97;&#100;&#111;&#46;c&#x6f;&#109;">&#115;&#117;&#x70;&#x70;&#x6f;&#x72;&#116;&#64;&#118;&#105;&#118;&#97;&#114;&#97;&#100;&#111;&#46;c&#x6f;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
