--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#97;&#105;&#108;&#x74;&#x6f;&#x3a;&#x73;&#x75;&#112;&#112;&#111;r&#116;&#x40;&#x76;&#105;&#x76;&#97;&#114;&#97;&#100;&#111;&#x2e;&#99;&#111;&#x6d;">&#x73;&#x75;&#112;&#112;&#111;r&#116;&#x40;&#x76;&#105;&#x76;&#97;&#114;&#97;&#100;&#111;&#x2e;&#99;&#111;&#x6d;</a></li>
+<li>VivaRado <a href="&#109;a&#x69;&#108;&#x74;&#111;:&#x73;&#117;&#x70;&#x70;&#111;&#x72;&#116;&#x40;&#118;&#105;&#x76;&#97;&#114;&#97;&#100;o&#x2e;&#x63;&#111;&#109;">&#x73;&#117;&#x70;&#x70;&#111;&#x72;&#116;&#x40;&#118;&#105;&#x76;&#97;&#114;&#97;&#100;o&#x2e;&#x63;&#111;&#109;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;ai&#108;&#116;&#x6f;&#x3a;m&#x6a;&#x6c;&#x61;&#103;&#x61;&#116;&#116;&#117;&#x74;a&#x40;&#103;&#x6d;&#x61;&#105;&#x6c;&#46;&#99;&#111;&#x6d;">m&#x6a;&#x6c;&#x61;&#103;&#x61;&#116;&#116;&#117;&#x74;a&#x40;&#103;&#x6d;&#x61;&#105;&#x6c;&#46;&#99;&#111;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#97;&#105;&#108;&#116;&#x6f;&#x3a;&#x6d;&#106;&#108;a&#x67;&#97;&#x74;&#116;&#x75;&#x74;&#97;&#64;&#x67;m&#x61;&#x69;&#x6c;&#x2e;&#99;&#x6f;&#x6d;">&#x6d;&#106;&#108;a&#x67;&#97;&#x74;&#116;&#x75;&#x74;&#97;&#64;&#x67;m&#x61;&#x69;&#x6c;&#x2e;&#99;&#x6f;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -308,6 +308,24 @@
 <li>Kerning Compression</li>
 </ol></li>
 </ol>
+
+<h4>Fontbakery Gave us a Cupcake:</h4>
+
+<pre><code>       .,@@'
+    .@@@@..@@@@.
+  .@@,  .@ .  .@@, 
+.@@.@`  ,.@.,'  '@@@
+@    "@'      '@"  @
+:@@@..@. ,@..@.@@.,@
+  \\ ||@@' |||| //
+   || |||| ||| ||
+    \\ ||| || //
+     ||||||||||
+
+ Advent Cupcake Day
+   April 13 2019
+
+</code></pre>
 
 <hr />
 
@@ -1033,7 +1051,7 @@ later you can export to Componentized UFOs.</p>
         ADV-0004-0003 MI Map:         done, des6, 2019-04-10, 2h
 
         ADV-0004-0005 Autokern Reintegration to TYPL - Standalone Repo: done, des8, 2019-04-12, 6h
-        ADV-0004-0006:         des9, 2019-04-13, 2h
+        ADV-0004-0006 Cupcake Day!:         done, des9, 2019-04-13, 2h
         ADV-0004-0007:         des10, 2019-04-14, 2h
         ADV-0004-0008:         des11, 2019-04-15, 2h
         ADV-0004-0009:         des12, 2019-04-16, 2h
@@ -1099,6 +1117,7 @@ later you can export to Componentized UFOs.</p>
 <li><strike><strong>ADV-0004-0002 Compare Current Encoding Support against NAM</strong></strike> 2019-04-09 2h</li>
 <li><strike><strong>ADV-0004-0003 Masters and Instances Map</strong></strike> 2019-04-10 4h</li>
 <li><strike><strong>ADV-0004-0005 Autokern Reintegration to TYPL</strong></strike> 2019-04-12 6h</li>
+<li><strike><strong>ADV-0004-0006 Advent Fontbakery Cupcake Day!</strong></strike> 2019-04-13 2h</li>
 </ul></li>
 </ul></li>
 </ul>
@@ -1172,7 +1191,7 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#97;i&#x6c;&#x74;&#111;&#58;&#115;&#117;&#x70;&#x70;&#x6f;&#x72;&#116;&#64;&#118;&#105;&#118;&#97;&#114;&#97;&#100;&#111;&#46;c&#x6f;&#109;">&#115;&#117;&#x70;&#x70;&#x6f;&#x72;&#116;&#64;&#118;&#105;&#118;&#97;&#114;&#97;&#100;&#111;&#46;c&#x6f;&#109;</a></li>
+<li><a href="&#x6d;&#x61;&#105;&#108;&#116;&#111;&#58;s&#x75;&#x70;&#112;&#x6f;r&#x74;&#x40;v&#105;&#118;&#x61;&#114;&#97;&#100;&#111;&#x2e;&#x63;&#111;&#x6d;">s&#x75;&#x70;&#112;&#x6f;r&#x74;&#x40;v&#105;&#118;&#x61;&#114;&#97;&#100;&#111;&#x2e;&#x63;&#111;&#x6d;</a></li>
 </ul></li>
 </ul></li>
 </ul>
