--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;a&#x69;&#108;&#x74;&#111;:&#x73;&#117;&#x70;&#x70;&#111;&#x72;&#116;&#x40;&#118;&#105;&#x76;&#97;&#114;&#97;&#100;o&#x2e;&#x63;&#111;&#109;">&#x73;&#117;&#x70;&#x70;&#111;&#x72;&#116;&#x40;&#118;&#105;&#x76;&#97;&#114;&#97;&#100;o&#x2e;&#x63;&#111;&#109;</a></li>
+<li>VivaRado <a href="&#109;&#x61;&#x69;&#x6c;&#x74;&#x6f;&#x3a;&#115;&#117;&#x70;&#x70;&#111;&#x72;&#116;&#64;&#118;i&#118;&#x61;&#114;&#97;&#100;&#x6f;&#46;&#x63;&#x6f;m">&#115;&#117;&#x70;&#x70;&#111;&#x72;&#116;&#64;&#118;i&#118;&#x61;&#114;&#97;&#100;&#x6f;&#46;&#x63;&#x6f;m</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#97;&#105;&#108;&#116;&#x6f;&#x3a;&#x6d;&#106;&#108;a&#x67;&#97;&#x74;&#116;&#x75;&#x74;&#97;&#64;&#x67;m&#x61;&#x69;&#x6c;&#x2e;&#99;&#x6f;&#x6d;">&#x6d;&#106;&#108;a&#x67;&#97;&#x74;&#116;&#x75;&#x74;&#97;&#64;&#x67;m&#x61;&#x69;&#x6c;&#x2e;&#99;&#x6f;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#97;&#105;l&#116;&#x6f;&#58;&#x6d;&#x6a;&#x6c;&#97;&#103;&#x61;&#116;&#116;&#117;&#x74;&#x61;&#64;&#x67;&#109;&#97;&#105;&#x6c;&#x2e;&#x63;&#x6f;&#109;">&#x6d;&#x6a;&#x6c;&#97;&#103;&#x61;&#116;&#116;&#117;&#x74;&#x61;&#64;&#x67;&#109;&#97;&#105;&#x6c;&#x2e;&#x63;&#x6f;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -326,6 +326,8 @@
    April 13 2019
 
 </code></pre>
+
+<p>Image CupCake, Actual Cupcake Fairly Larger. Objects in ANSI are larger than they appear.</p>
 
 <hr />
 
@@ -1191,7 +1193,7 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#x61;&#105;&#108;&#116;&#111;&#58;s&#x75;&#x70;&#112;&#x6f;r&#x74;&#x40;v&#105;&#118;&#x61;&#114;&#97;&#100;&#111;&#x2e;&#x63;&#111;&#x6d;">s&#x75;&#x70;&#112;&#x6f;r&#x74;&#x40;v&#105;&#118;&#x61;&#114;&#97;&#100;&#111;&#x2e;&#x63;&#111;&#x6d;</a></li>
+<li><a href="&#x6d;a&#105;&#x6c;&#x74;&#111;&#x3a;&#115;&#x75;&#112;&#x70;&#x6f;&#x72;&#x74;&#64;&#118;&#105;&#118;&#97;&#x72;ad&#111;&#46;&#x63;&#111;&#109;">&#115;&#x75;&#112;&#x70;&#x6f;&#x72;&#x74;&#64;&#118;&#105;&#118;&#97;&#x72;ad&#111;&#46;&#x63;&#111;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
