--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#97;&#x69;&#108;&#x74;&#111;:&#x73;&#117;p&#x70;&#x6f;&#114;&#116;&#64;v&#x69;&#x76;&#x61;&#x72;&#x61;&#100;&#111;&#x2e;&#x63;&#x6f;&#x6d;">&#x73;&#117;p&#x70;&#x6f;&#114;&#116;&#64;v&#x69;&#x76;&#x61;&#x72;&#x61;&#100;&#111;&#x2e;&#x63;&#x6f;&#x6d;</a></li>
+<li>VivaRado <a href="&#109;&#97;&#x69;&#x6c;&#116;&#x6f;&#58;&#115;&#x75;&#112;p&#111;&#x72;&#116;&#64;&#x76;i&#118;&#x61;&#114;&#97;&#100;&#x6f;&#46;&#x63;&#111;&#x6d;">&#115;&#x75;&#112;p&#111;&#x72;&#116;&#64;&#x76;i&#118;&#x61;&#114;&#97;&#100;&#x6f;&#46;&#x63;&#111;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#x61;&#x69;&#x6c;&#x74;&#x6f;&#x3a;&#x6d;j&#x6c;&#97;g&#x61;&#x74;&#116;&#x75;&#116;&#97;&#64;&#x67;&#109;&#97;&#x69;&#x6c;&#x2e;&#99;om">&#x6d;j&#x6c;&#97;g&#x61;&#x74;&#116;&#x75;&#116;&#97;&#64;&#x67;&#109;&#97;&#x69;&#x6c;&#x2e;&#99;om</a></li>
+<li>Michael LaGattuta <a href="&#109;&#x61;&#105;&#x6c;&#x74;&#111;&#x3a;&#109;&#x6a;l&#x61;&#x67;&#x61;t&#116;u&#116;&#97;&#x40;&#x67;m&#x61;&#105;&#x6c;&#x2e;&#x63;&#x6f;&#109;">&#109;&#x6a;l&#x61;&#x67;&#x61;t&#116;u&#116;&#97;&#x40;&#x67;m&#x61;&#105;&#x6c;&#x2e;&#x63;&#x6f;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1472,7 +1472,7 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#97;&#x69;&#x6c;&#x74;&#x6f;&#x3a;&#115;&#x75;&#x70;&#x70;&#111;&#x72;&#116;&#x40;&#x76;&#x69;&#x76;&#x61;&#114;&#97;&#100;&#x6f;&#46;c&#x6f;&#x6d;">&#115;&#x75;&#x70;&#x70;&#111;&#x72;&#116;&#x40;&#x76;&#x69;&#x76;&#x61;&#114;&#97;&#100;&#x6f;&#46;c&#x6f;&#x6d;</a></li>
+<li><a href="&#x6d;&#97;&#105;&#x6c;&#116;&#x6f;&#58;&#115;u&#x70;&#112;&#x6f;&#114;&#x74;&#x40;&#x76;i&#x76;&#97;&#x72;&#97;&#100;&#x6f;&#46;&#99;&#111;&#109;">&#115;u&#x70;&#112;&#x6f;&#114;&#x74;&#x40;&#x76;i&#x76;&#97;&#x72;&#97;&#100;&#x6f;&#46;&#99;&#111;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
