--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#97;&#x69;&#x6c;&#116;&#x6f;&#58;&#115;&#x75;&#112;p&#111;&#x72;&#116;&#64;&#x76;i&#118;&#x61;&#114;&#97;&#100;&#x6f;&#46;&#x63;&#111;&#x6d;">&#115;&#x75;&#112;p&#111;&#x72;&#116;&#64;&#x76;i&#118;&#x61;&#114;&#97;&#100;&#x6f;&#46;&#x63;&#111;&#x6d;</a></li>
+<li>VivaRado <a href="&#x6d;&#x61;&#105;&#108;&#116;&#111;&#x3a;&#x73;&#117;&#x70;p&#x6f;&#114;&#116;&#x40;&#118;&#105;&#118;&#97;r&#97;&#x64;&#x6f;&#46;&#x63;&#x6f;m">&#x73;&#117;&#x70;p&#x6f;&#114;&#116;&#x40;&#118;&#105;&#118;&#97;r&#97;&#x64;&#x6f;&#46;&#x63;&#x6f;m</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#x61;&#105;&#x6c;&#x74;&#111;&#x3a;&#109;&#x6a;l&#x61;&#x67;&#x61;t&#116;u&#116;&#97;&#x40;&#x67;m&#x61;&#105;&#x6c;&#x2e;&#x63;&#x6f;&#109;">&#109;&#x6a;l&#x61;&#x67;&#x61;t&#116;u&#116;&#97;&#x40;&#x67;m&#x61;&#105;&#x6c;&#x2e;&#x63;&#x6f;&#109;</a></li>
+<li>Michael LaGattuta <a href="&#109;&#97;&#x69;&#x6c;&#x74;&#111;&#58;&#x6d;&#106;&#108;&#97;&#x67;at&#116;&#x75;&#x74;&#x61;&#x40;&#103;&#109;&#97;&#x69;l&#46;c&#x6f;&#x6d;">&#x6d;&#106;&#108;&#97;&#x67;at&#116;&#x75;&#x74;&#x61;&#x40;&#103;&#109;&#97;&#x69;l&#46;c&#x6f;&#x6d;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -542,7 +542,7 @@
 
 <h3><strong>Introduction / Phase Introduction / Planning Phase / Safe Planning / Project Plan / Masters and Instances</strong></h3>
 
-<p>The diagram shows the Original Masters (MO), Generated Masters (MG) that get adjusted manually and the automatically generated instances (I).</p>
+<p>The diagram shows the Original Masters (MO), Generated Masters (MG) that get adjusted manually and the automatically generated instances (MA).</p>
 
 <p><img src="assets/media/advent_masters_sankey.svg" alt="Masters and Instances" /></p>
 
@@ -1472,7 +1472,7 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#97;&#105;&#x6c;&#116;&#x6f;&#58;&#115;u&#x70;&#112;&#x6f;&#114;&#x74;&#x40;&#x76;i&#x76;&#97;&#x72;&#97;&#100;&#x6f;&#46;&#99;&#111;&#109;">&#115;u&#x70;&#112;&#x6f;&#114;&#x74;&#x40;&#x76;i&#x76;&#97;&#x72;&#97;&#100;&#x6f;&#46;&#99;&#111;&#109;</a></li>
+<li><a href="&#109;&#97;&#105;&#108;&#x74;&#x6f;&#58;&#x73;&#x75;&#112;&#x70;&#x6f;&#114;&#116;&#x40;&#x76;i&#x76;&#x61;&#114;&#x61;&#100;&#111;&#46;&#99;&#x6f;&#109;">&#x73;&#x75;&#112;&#x70;&#x6f;&#114;&#116;&#x40;&#x76;i&#x76;&#x61;&#114;&#x61;&#100;&#111;&#46;&#99;&#x6f;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
@@ -1587,7 +1587,7 @@ later you can export to Componentized UFOs.</p>
 
 <p><strong>MG</strong>: Master Generated, a master automatically generated and manually fixed.</p>
 
-<p><strong>I</strong>: Instance, completely automatically generated.</p>
+<p><strong>MA</strong>: Master Automated, completely automatically generated.</p>
 
 <hr />
 
