--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#x61;&#105;&#108;&#116;&#111;&#x3a;&#x73;&#117;&#x70;p&#x6f;&#114;&#116;&#x40;&#118;&#105;&#118;&#97;r&#97;&#x64;&#x6f;&#46;&#x63;&#x6f;m">&#x73;&#117;&#x70;p&#x6f;&#114;&#116;&#x40;&#118;&#105;&#118;&#97;r&#97;&#x64;&#x6f;&#46;&#x63;&#x6f;m</a></li>
+<li>VivaRado <a href="&#x6d;&#x61;&#105;&#108;&#116;&#111;&#58;&#115;&#x75;p&#112;&#x6f;&#x72;&#116;&#64;v&#x69;&#x76;&#x61;&#114;a&#x64;&#111;&#x2e;&#x63;o&#109;">&#115;&#x75;p&#112;&#x6f;&#x72;&#116;&#64;v&#x69;&#x76;&#x61;&#114;a&#x64;&#111;&#x2e;&#x63;o&#109;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;&#97;&#x69;&#x6c;&#x74;&#111;&#58;&#x6d;&#106;&#108;&#97;&#x67;at&#116;&#x75;&#x74;&#x61;&#x40;&#103;&#109;&#97;&#x69;l&#46;c&#x6f;&#x6d;">&#x6d;&#106;&#108;&#97;&#x67;at&#116;&#x75;&#x74;&#x61;&#x40;&#103;&#109;&#97;&#x69;l&#46;c&#x6f;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#x61;&#105;&#x6c;&#x74;&#111;&#x3a;&#109;&#106;&#108;&#x61;&#103;&#97;&#116;&#x74;&#x75;t&#x61;&#x40;&#103;&#x6d;&#x61;&#x69;&#108;&#46;&#x63;&#x6f;&#109;">&#109;&#106;&#108;&#x61;&#103;&#97;&#116;&#x74;&#x75;t&#x61;&#x40;&#103;&#x6d;&#x61;&#x69;&#108;&#46;&#x63;&#x6f;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1472,7 +1472,7 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#97;&#105;&#108;&#x74;&#x6f;&#58;&#x73;&#x75;&#112;&#x70;&#x6f;&#114;&#116;&#x40;&#x76;i&#x76;&#x61;&#114;&#x61;&#100;&#111;&#46;&#99;&#x6f;&#109;">&#x73;&#x75;&#112;&#x70;&#x6f;&#114;&#116;&#x40;&#x76;i&#x76;&#x61;&#114;&#x61;&#100;&#111;&#46;&#99;&#x6f;&#109;</a></li>
+<li><a href="&#109;&#x61;i&#x6c;&#x74;&#111;&#58;&#x73;&#117;&#112;&#112;&#x6f;&#114;&#116;&#x40;&#118;&#105;&#x76;&#x61;r&#97;d&#111;.&#99;&#111;m">&#x73;&#117;&#112;&#112;&#x6f;&#114;&#116;&#x40;&#118;&#105;&#x76;&#x61;r&#97;d&#111;.&#99;&#111;m</a></li>
 </ul></li>
 </ul></li>
 </ul>
