--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#x61;&#105;&#108;&#116;&#111;&#58;&#115;&#x75;p&#112;&#x6f;&#x72;&#116;&#64;v&#x69;&#x76;&#x61;&#114;a&#x64;&#111;&#x2e;&#x63;o&#109;">&#115;&#x75;p&#112;&#x6f;&#x72;&#116;&#64;v&#x69;&#x76;&#x61;&#114;a&#x64;&#111;&#x2e;&#x63;o&#109;</a></li>
+<li>VivaRado <a href="&#109;&#x61;&#105;l&#x74;&#x6f;&#x3a;&#x73;&#117;&#x70;p&#111;&#114;&#116;&#64;&#118;&#x69;&#118;&#97;&#x72;&#x61;&#100;&#111;&#x2e;&#x63;&#x6f;&#x6d;">&#x73;&#117;&#x70;p&#111;&#114;&#116;&#64;&#118;&#x69;&#118;&#97;&#x72;&#x61;&#100;&#111;&#x2e;&#x63;&#x6f;&#x6d;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#x61;&#105;&#x6c;&#x74;&#111;&#x3a;&#109;&#106;&#108;&#x61;&#103;&#97;&#116;&#x74;&#x75;t&#x61;&#x40;&#103;&#x6d;&#x61;&#x69;&#108;&#46;&#x63;&#x6f;&#109;">&#109;&#106;&#108;&#x61;&#103;&#97;&#116;&#x74;&#x75;t&#x61;&#x40;&#103;&#x6d;&#x61;&#x69;&#108;&#46;&#x63;&#x6f;&#109;</a></li>
+<li>Michael LaGattuta <a href="m&#97;&#x69;&#x6c;&#116;&#x6f;:&#109;&#x6a;&#x6c;&#97;&#x67;&#97;&#116;&#x74;&#117;t&#97;&#64;&#x67;&#x6d;&#97;i&#108;&#x2e;&#x63;o&#109;">&#109;&#x6a;&#x6c;&#97;&#x67;&#97;&#116;&#x74;&#117;t&#97;&#64;&#x67;&#x6d;&#97;i&#108;&#x2e;&#x63;o&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1472,7 +1472,7 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#x61;i&#x6c;&#x74;&#111;&#58;&#x73;&#117;&#112;&#112;&#x6f;&#114;&#116;&#x40;&#118;&#105;&#x76;&#x61;r&#97;d&#111;.&#99;&#111;m">&#x73;&#117;&#112;&#112;&#x6f;&#114;&#116;&#x40;&#118;&#105;&#x76;&#x61;r&#97;d&#111;.&#99;&#111;m</a></li>
+<li><a href="&#109;a&#x69;&#108;&#116;&#x6f;&#x3a;&#115;&#x75;&#x70;&#x70;&#111;&#114;&#x74;&#64;&#118;&#105;&#118;&#97;&#x72;&#97;&#x64;o.&#x63;&#111;&#109;">&#115;&#x75;&#x70;&#x70;&#111;&#114;&#x74;&#64;&#118;&#105;&#118;&#97;&#x72;&#97;&#x64;o.&#x63;&#111;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
