--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#x6d;&#97;&#x69;&#x6c;&#116;&#111;&#58;su&#x70;&#112;&#x6f;&#114;&#x74;&#64;&#118;i&#x76;&#x61;&#114;&#x61;&#100;&#x6f;.&#x63;o&#x6d;">su&#x70;&#112;&#x6f;&#114;&#x74;&#64;&#118;i&#x76;&#x61;&#114;&#x61;&#100;&#x6f;.&#x63;o&#x6d;</a></li>
+<li>VivaRado <a href="&#109;&#x61;&#x69;&#x6c;&#x74;&#x6f;&#x3a;&#x73;&#x75;&#x70;po&#114;&#116;&#x40;&#118;&#105;&#118;&#x61;&#x72;&#x61;&#x64;&#x6f;&#46;&#x63;&#x6f;&#109;">&#x73;&#x75;&#x70;po&#114;&#116;&#x40;&#118;&#105;&#118;&#x61;&#x72;&#x61;&#x64;&#x6f;&#46;&#x63;&#x6f;&#109;</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#109;a&#x69;&#108;t&#111;&#58;&#x6d;&#x6a;&#108;&#x61;&#x67;a&#116;t&#x75;&#x74;a&#x40;&#103;&#x6d;&#97;&#x69;&#x6c;&#46;&#x63;&#111;&#x6d;">&#x6d;&#x6a;&#108;&#x61;&#x67;a&#116;t&#x75;&#x74;a&#x40;&#103;&#x6d;&#97;&#x69;&#x6c;&#46;&#x63;&#111;&#x6d;</a></li>
+<li>Michael LaGattuta <a href="&#x6d;&#x61;&#105;&#x6c;&#x74;&#x6f;&#58;m&#x6a;&#x6c;&#x61;&#103;&#97;&#116;&#116;&#117;&#116;&#x61;&#64;&#x67;&#x6d;&#x61;&#x69;&#x6c;&#x2e;&#99;&#x6f;&#109;">m&#x6a;&#x6c;&#x61;&#103;&#97;&#116;&#116;&#117;&#116;&#x61;&#64;&#x67;&#x6d;&#x61;&#x69;&#x6c;&#x2e;&#99;&#x6f;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1248,7 +1248,7 @@ later you can export to Componentized UFOs.</p>
     end
 </code></pre>
 
-<p>diagram: #006, ∞0.001, mermaid, Work Breakdown Structure of Advent</p>
+<p>diagram: #006, ∞0.001, mermaid, Work Breakdown Structure of Advent for Kerning.</p>
 
 <hr />
 
@@ -1472,7 +1472,7 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#109;&#x61;i&#x6c;&#x74;o&#x3a;&#115;&#x75;&#x70;&#x70;&#111;r&#x74;&#64;&#118;&#105;v&#x61;&#114;&#97;&#100;&#x6f;&#46;&#99;&#111;&#x6d;">&#115;&#x75;&#x70;&#x70;&#111;r&#x74;&#64;&#118;&#105;v&#x61;&#114;&#97;&#100;&#x6f;&#46;&#99;&#111;&#x6d;</a></li>
+<li><a href="&#x6d;&#x61;&#105;&#108;&#116;&#x6f;&#58;&#115;&#117;&#112;&#112;&#111;&#x72;&#116;&#64;&#x76;&#105;&#x76;&#97;&#114;&#97;&#x64;o&#x2e;&#x63;&#x6f;&#109;">&#115;&#117;&#112;&#112;&#111;&#x72;&#116;&#64;&#x76;&#105;&#x76;&#97;&#114;&#97;&#x64;o&#x2e;&#x63;&#x6f;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
