--- a/README/README.html
+++ b/README/README.html
@@ -125,11 +125,11 @@
 <h4>Contributors:</h4>
 
 <ul>
-<li>VivaRado <a href="&#109;&#x61;&#x69;&#x6c;&#x74;&#x6f;&#x3a;&#x73;&#x75;&#x70;po&#114;&#116;&#x40;&#118;&#105;&#118;&#x61;&#x72;&#x61;&#x64;&#x6f;&#46;&#x63;&#x6f;&#109;">&#x73;&#x75;&#x70;po&#114;&#116;&#x40;&#118;&#105;&#118;&#x61;&#x72;&#x61;&#x64;&#x6f;&#46;&#x63;&#x6f;&#109;</a></li>
+<li>VivaRado <a href="&#x6d;&#97;&#x69;&#x6c;t&#111;&#58;&#x73;&#x75;&#112;&#112;&#111;&#114;&#x74;&#64;&#x76;&#105;&#x76;a&#114;&#x61;&#x64;&#111;&#46;&#x63;&#x6f;m">&#x73;&#x75;&#112;&#112;&#111;&#114;&#x74;&#64;&#x76;&#105;&#x76;a&#114;&#x61;&#x64;&#111;&#46;&#x63;&#x6f;m</a></li>
 <li>Andreas Kalpakidis</li>
 <li>Madina Akhmatova</li>
 <li>Dave Crossland</li>
-<li>Michael LaGattuta <a href="&#x6d;&#x61;&#105;&#x6c;&#x74;&#x6f;&#58;m&#x6a;&#x6c;&#x61;&#103;&#97;&#116;&#116;&#117;&#116;&#x61;&#64;&#x67;&#x6d;&#x61;&#x69;&#x6c;&#x2e;&#99;&#x6f;&#109;">m&#x6a;&#x6c;&#x61;&#103;&#97;&#116;&#116;&#117;&#116;&#x61;&#64;&#x67;&#x6d;&#x61;&#x69;&#x6c;&#x2e;&#99;&#x6f;&#109;</a></li>
+<li>Michael LaGattuta <a href="m&#x61;&#105;&#x6c;&#116;&#x6f;&#58;&#x6d;&#106;&#x6c;&#97;&#103;a&#116;&#x74;&#x75;&#x74;&#x61;&#64;&#103;&#x6d;&#x61;&#x69;&#x6c;&#46;&#99;&#x6f;&#109;">&#x6d;&#106;&#x6c;&#97;&#103;a&#116;&#x74;&#x75;&#x74;&#x61;&#64;&#103;&#x6d;&#x61;&#x69;&#x6c;&#46;&#99;&#x6f;&#109;</a></li>
 <li>Behdad Esfahbod</li>
 </ul>
 
@@ -1333,7 +1333,7 @@ later you can export to Componentized UFOs.</p>
 
         ADV-0004-0005 Autokern Reintegration to TYPL - Standalone Repo: done, des8, 2019-04-12, 6h
         ADV-0004-0006 Cupcake Day!:         done, des9, 2019-04-13, 2h
-        ADV-0004-0007:         des10, 2019-04-14, 2h
+        ADV-0004-0007 Advent Master Planning:         done, des10, 2019-04-14, 2h
         ADV-0004-0008:         des11, 2019-04-15, 2h
         ADV-0004-0009:         des12, 2019-04-16, 2h
         ADV-0004-0010:         des13, 2019-04-17, 2h
@@ -1399,6 +1399,7 @@ later you can export to Componentized UFOs.</p>
 <li><strike><strong>ADV-0004-0003 Masters and Instances Map</strong></strike> 2019-04-10 4h</li>
 <li><strike><strong>ADV-0004-0005 Autokern Reintegration to TYPL</strong></strike> 2019-04-12 6h</li>
 <li><strike><strong>ADV-0004-0006 Advent Fontbakery Cupcake Day!</strong></strike> 2019-04-13 2h</li>
+<li><strike><strong>ADV-0004-0007 Advent Master Planning</strong></strike> 2019-04-14 2h</li>
 </ul></li>
 </ul></li>
 </ul>
@@ -1472,7 +1473,7 @@ later you can export to Componentized UFOs.</p>
 </ul></li>
 <li>User Feedback Mechanisms:
 <ul>
-<li><a href="&#x6d;&#x61;&#105;&#108;&#116;&#x6f;&#58;&#115;&#117;&#112;&#112;&#111;&#x72;&#116;&#64;&#x76;&#105;&#x76;&#97;&#114;&#97;&#x64;o&#x2e;&#x63;&#x6f;&#109;">&#115;&#117;&#112;&#112;&#111;&#x72;&#116;&#64;&#x76;&#105;&#x76;&#97;&#114;&#97;&#x64;o&#x2e;&#x63;&#x6f;&#109;</a></li>
+<li><a href="m&#97;&#105;&#x6c;&#x74;&#x6f;&#x3a;&#x73;u&#112;&#112;&#111;&#x72;&#116;&#64;&#x76;&#105;&#x76;a&#114;&#97;&#100;&#111;&#x2e;&#x63;&#x6f;&#109;">&#x73;u&#112;&#112;&#111;&#x72;&#116;&#64;&#x76;&#105;&#x76;a&#114;&#97;&#100;&#111;&#x2e;&#x63;&#x6f;&#109;</a></li>
 </ul></li>
 </ul></li>
 </ul>
